@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/gnome
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.96 2004/03/10 17:24:20 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.97 2004/03/21 19:18:19 foser Exp $
+
+*gnome-2.6_rc1 (21 Mar 2004)
+
+  21 Mar 2004; foser <foser@gentoo.org> gnome-2.6_rc1.ebuild :
+  Initial gnome 2.6 meta ebuild
+  Misses gstreamer & accessibility
 
   09 Mar 2004; <agriffis@gentoo.org> gnome-2.4.2.ebuild:
   stable on alpha and ia64
